test/parser/let.error.1.err
EXPECTED_PATTERN[1013] in test/parser/let.error.1.pytch, line 1, character 4:
Error: I was expecting a pattern after 'let'.
   +-----------------------------------------------------+
   | test/parser/let.error.1.pytch                       |
 1 | let                                                 |
   |    ^ Error: I was expecting a pattern after 'let'.  |
   | ^~~ Note: This is the beginning of the let-binding. |
   +-----------------------------------------------------+
